"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "main/version.cc".

2006-04-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-16-prsim-03-03:
	  Provisional implementation of rule-cause tracking, to trace which
		rule fired for the purpose of using per-rule attribute info.
		Currently enabled by ENABLE_PRSIM_CAUSE_TRACKING flag
		in "sim/devel_switches.h" (new).
	  prsim: new 'timing' command to replace 'random'/'norandom'.
		There are two non-random modes: uniform and after.
		'uniform' is useful for transition counts,
		'after' is useful for delay estimation, more to come...
	  TODO: timing mode test cases, use of after-delay rule attributes.
	  TODO: test for new invariants involving rule-cause assignment.  


2006-04-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-16-prsim-03-02:
	  Started to factor out common tool-independent functions of
		PRS rule attributes.  Tool-dependent passes, such as cflat
		and prsim expression allocation can (and should) derive
		from these to leverage code-reuse.  
	  sim/time.{h,cc}: added new delay_policy traits class, 
		with members such as invalid_delay, default_delay.  
	  sim/prsim/Rule.h: new structure for rule attributes.  
	  Implemented ExprAlloc rule attribute registry (After, Weak), 
		but their results aren't visible yet in the simulator.  
		footprint_rule visitation now traverses attributes list.  
	  PRSIM::State: added new rule_map to store/encode rule attributes.  
	  TODO: print out (and use) rule attributes in prsim.  


2006-04-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-16-prsim-03-01:
	  Factored out parent classes cflat_visitor and cflat_context
		into cflat_context_visitor, inherited by SIM::PRSIM::ExprAlloc, 
		and entity::PRS::cflat_prs_printer.  Much common functionality
		shared between these two visitors.  