@@ -1,14 +1,14 @@
 /**
 	\file "util/c_decl.h"
 	Macro for wrapping C declarations.  
-	$Id: c_decl.h,v 1.2 2006/01/22 06:53:32 fang Exp $
+	$Id: c_decl.h,v 1.2.32.1 2006/04/19 20:23:35 fang Exp $
  */
 
 #ifndef	__UTIL_C_DECL_H__
 #define	__UTIL_C_DECL_H__
 
 #if	defined(BEGIN_C_DECLS) || defined(END_C_DECLS)
-#error	"tried to redefined BEGIN_C_DECLS or END_C_DECLS"
+#error	"tried to redefine BEGIN_C_DECLS or END_C_DECLS"
 #else
 
 #ifdef	__cplusplus
