@@ -1,0 +1,51 @@
+timing: uniform (10)
+Fanins of node `e':
+[after 30]	(~a & ~b) | 
+[after 150]	(~c & ~d) -> e+
+[after 20]	(a & b) | 
+[after 100]	(c & d) -> e-
+all events should have default uniform delay 
+	0	a : 0
+	0	c : 0
+	0	b : 0
+	0	d : 1
+	10	e : 1
+	10	b : 1
+	10	c : 1
+	20	e : 0
+	20	c : 0
+	20	d : 0
+	30	e : 1
+	30	c : 1
+	30	a : 1
+	40	e : 0
+all events should have default uniform delay 
+	0	a : 0
+	0	c : 0
+	0	b : 0
+	0	d : 1
+	20	e : 1
+	20	b : 1
+	20	c : 1
+	40	e : 0
+	40	c : 0
+	40	d : 0
+	60	e : 1
+	60	c : 1
+	60	a : 1
+	80	e : 0
+all events should have their own delays 
+	0	a : 0
+	0	c : 0
+	0	b : 0
+	0	d : 1
+	30	e : 1
+	30	b : 1
+	30	c : 1
+	130	e : 0
+	130	c : 0
+	130	d : 0
+	280	e : 1
+	280	c : 1
+	280	a : 1
+	300	e : 0
