@@ -1,5 +1,5 @@
 # "oscil-random-01.prsimrc"
-#	$Id: oscil-random-01.prsimrc,v 1.2 2006/04/03 05:30:50 fang Exp $
+#	$Id: oscil-random-01.prsimrc,v 1.2.6.1 2006/04/19 20:23:38 fang Exp $
 # @haco@ oscillator.haco-a
 # Testing timing features
 
@@ -9,9 +9,9 @@ cycle
 set _Reset 1
 step 40
 echo now with random delays
-random
+timing random
 step 40
 echo non-random delays
-norandom
+timing uniform
 step 40
 
